@@ -7,11 +7,11 @@
 	<parent>
 		<groupId>de.alpharogroup</groupId>
 		<artifactId>mvn-parent-projects</artifactId>
-		<version>2.2</version>
+		<version>3</version>
 	</parent>
 
 	<artifactId>mvn-java-parent</artifactId>
-	<version>5.1-SNAPSHOT</version>
+	<version>6.1</version>
 	<packaging>pom</packaging>
 	<inceptionYear>2015</inceptionYear>
 
@@ -39,9 +39,6 @@
 		<random-beans.version>3.9.0</random-beans.version>
 		<!-- JAVA-SEMVER version -->
 		<java-semver.version>0.9.0</java-semver.version>
-		<!-- COM-SUN-TOOLS versions -->
-		<com.sun-tools.version>1.7.0.13</com.sun-tools.version>
-		<system-path-of-tools-jar>${java.home}/../lib/tools.jar</system-path-of-tools-jar>
 		<!-- JSR305 LIB version -->
 		<jsr305.version>3.0.2</jsr305.version>
 		<!-- JSR250-API LIB version -->
@@ -160,14 +157,6 @@
 				<artifactId>jsr250-api</artifactId>
 				<version>${jsr250-api.version}</version>
 			</dependency>
-			<!-- COM-SUN-TOOLS DEPENDENCIES -->
-			<dependency>
-				<groupId>com.sun</groupId>
-				<artifactId>tools</artifactId>
-				<version>${com.sun-tools.version}</version>
-				<scope>system</scope>
-				<systemPath>${system-path-of-tools-jar}</systemPath>
-			</dependency>
 
 		</dependencies>
 
@@ -178,7 +167,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-		</dependency>		
+		</dependency>
 		<!-- UNIT TESTS DEPENDENCIES -->
 		<dependency>
 			<groupId>org.testng</groupId>
@@ -291,6 +280,7 @@
 							<exclude>**/*.editorconfig</exclude>
 							<exclude>**/*.versionsBackup</exclude>
 							<exclude>**/*.launch</exclude>
+							<exclude>**/*lombok.config</exclude>
 							<exclude>src/test/resources/**</exclude>
 							<exclude>src/main/resources/**</exclude>
 						</excludes>
@@ -308,6 +298,11 @@
 					<inherited>true</inherited>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>${maven-surefire-plugin.version}</version>
+					<configuration>
+						<argLine>
+							--illegal-access=permit
+						</argLine>
+					</configuration>
 				</plugin>
 
 				<plugin>
@@ -520,13 +515,6 @@
 								<artifactId>lombok</artifactId>
 								<version>${lombok.version}</version>
 							</dependency>
-							<dependency>
-								<groupId>com.sun</groupId>
-								<artifactId>tools</artifactId>
-								<version>${com.sun-tools.version}</version>
-								<scope>system</scope>
-								<systemPath>${system-path-of-tools-jar}</systemPath>
-							</dependency>
 						</dependencies>
 						<executions>
 							<execution>
@@ -581,13 +569,6 @@
 								<groupId>org.projectlombok</groupId>
 								<artifactId>lombok</artifactId>
 								<version>${lombok.version}</version>
-							</dependency>
-							<dependency>
-								<groupId>com.sun</groupId>
-								<artifactId>tools</artifactId>
-								<version>${com.sun-tools.version}</version>
-								<scope>system</scope>
-								<systemPath>${system-path-of-tools-jar}</systemPath>
 							</dependency>
 						</dependencies>
 						<executions>
